[build-system]
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "bitbake-setup"
dynamic = ["version"]
description = "bitbake-setup"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0-only AND MIT"
authors = [
  { name = "OpenEmbedded BitBake Developers", email = "bitbake-devel@lists.openembedded.org" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

dependencies = [
  # bitbake-setup is mostly self-contained
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

lint = [
  "ruff>=0.3",
  "mypy>=1.8",
]

dev = [
  "pytest>=7",
  "ruff>=0.3",
  "mypy>=1.8",
  "build",
  "twine",
]

[project.scripts]
bitbake-setup = "bitbake_setup.__main__:main"

[project.urls]
Homepage = "https://git.openembedded.org/bitbake/"
Documentation = "https://docs.yoctoproject.org/bitbake/bitbake-user-manual/bitbake-user-manual-environment-setup.html"
Repository = "https://git.openembedded.org/bitbake/"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = false

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # import sorting
]
ignore = [
  "E501",  # line length (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "bitbake_setup.version.REQUIRED_BBVERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "bb*",
  "bitbake_setup",
  "bs4*",
  "codegen",
  "ply"
]